tests/invalid/syntax/enum_no_variants.fig
// INVALID: enum with no variants
// Expected parse error: at least one variant required in enum body
enum Empty
